# tasks-api

./: .env.example  .gitignore  README.md  TASK.md  locust-report-100.html  pyproject.toml
.github/workflows/: ci.yml
src/: manage.py
src/apps/tasks/: __init__.py  admin.py  apps.py  async_utils.py  enums.py  mixins.py  selectors.py  services.py  urls.py  validation.py  view_helpers.py  views.py
src/apps/tasks/api/: __init__.py  async_api_view.py  async_support.py  mixins.py  permissions.py  serializers.py  urls.py  view_helpers.py  views.py
src/apps/tasks/forms/: __init__.py  comment_form.py  task_form.py
src/apps/tasks/migrations/: 0001_initial.py  0002_seed_initial_data.py  __init__.py
src/apps/tasks/models/: __init__.py  comment.py  task.py
src/apps/tasks/tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_services.py  test_views.py
src/config/: __init__.py  asgi.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py  dev.py  env.py  prod.py  test.py
static/css/: styles.css
templates/: base.html
templates/registration/: login.html
templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
